fdo#69656 table with auto-width and at least one column with auto-width.

- In case of auto width of table and atleast one cell of table
    is auto width It was setting table width to 100% relative width.
  - hence it was causing rederening problem, table width was wrong
    while rendering.
  - Changed 100% hardcoded value, now setting total width of table
    as per grid values.
  - Preserving width type of each cell.
  - It will help export proper width of cell and table.
  - modified one UT since we no longer setting width of table to
    100% default in case of 'auto' width.
  - Added one UT to check proper cell width while importing.

Change-Id: Iae396c632eb1ef0c06efaa8c1965e4a68f12c6b1