sw/qa/extras/ooxmlimport/ooxmlimport.cxx
@@ -1330,7 +1330,7 @@ DECLARE_OOXMLIMPORT_TEST(testFdo66474, "fdo66474.docx")
     // take the full available width, like it would have to.
     uno::Reference<text::XTextTablesSupplier> xTablesSupplier(mxComponent, uno::UNO_QUERY);
     uno::Reference<container::XIndexAccess> xTables(xTablesSupplier->getTextTables( ), uno::UNO_QUERY);
-    CPPUNIT_ASSERT_EQUAL(sal_Int16(100), getProperty<sal_Int16>(xTables->getByIndex(0), "RelativeWidth"));
+    CPPUNIT_ASSERT_EQUAL(sal_Int16(0), getProperty<sal_Int16>(xTables->getByIndex(0), "RelativeWidth"));
 }
 
 DECLARE_OOXMLIMPORT_TEST(testGroupshapeRotation, "groupshape-rotation.docx")
@@ -1718,6 +1718,24 @@ DECLARE_OOXMLIMPORT_TEST(testFdo73389,"fdo73389.docx")
     uno::Reference<container::XIndexAccess> xTables(xTablesSupplier->getTextTables(), uno::UNO_QUERY);
     // This was 9340, i.e. the width of the inner table was too large.
     CPPUNIT_ASSERT_EQUAL(sal_Int32(2842), getProperty<sal_Int32>(xTables->getByIndex(0), "Width"));
+}
+
+DECLARE_OOXMLIMPORT_TEST(testFdo69656, "Table_cell_auto_width_fdo69656.docx")
+{
+    uno::Reference<text::XTextTablesSupplier> xTablesSupplier(mxComponent, uno::UNO_QUERY);
+    uno::Reference<container::XIndexAccess> xTables(xTablesSupplier->getTextTables( ), uno::UNO_QUERY);
+    uno::Reference<text::XTextTable> xTextTable(xTables->getByIndex(0), uno::UNO_QUERY);
+
+   // Check cell width is auto type.
+    uno::Reference<beans::XPropertySet> xTableCellProperties1(xTextTable->getCellByName("D1"), uno::UNO_QUERY);
+    sal_Int32 cellWidthType;
+    xTableCellProperties1->getPropertyValue("WidthType") >>= cellWidthType;
+    CPPUNIT_ASSERT_EQUAL(0, cellWidthType);
+
+    uno::Reference<beans::XPropertySet> xTableCellProperties2(xTextTable->getCellByName("D2"), uno::UNO_QUERY);
+    xTableCellProperties2->getPropertyValue("WidthType") >>= cellWidthType;
+    CPPUNIT_ASSERT_EQUAL(0, cellWidthType);
+
 }
 #endif
 
